Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     <h4 class="text-xl font-semibold mb-2 text-primary">IPFS-based Messaging DApp</h4>
                     <p class="text-text-light mb-4">A secure, decentralized messaging application using blockchain for end-to-end encrypted communication, featuring group chats and contact management. (In Progress)</p>
                 </div>
+                <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-transform duration-300">
+                    <h4 class="text-xl font-semibold mb-2 text-primary">IPFS-based Messaging DApp</h4>
+                    <p class="text-text-light mb-4">Designed and developed a multi-modal AI solution that utilized dual-engine OCR, spaCy’s NLP library, enhanced pre-processing, YOLOv8 for carrying out accurate automatic document understanding under different lighting conditions, orientations, and qualities of the documents. Created adaptive processing modes along with Streamlit frontend to provide real-time feedback, annotated results, and fast 2-8 produces the second set of search engine results pages for various real-world document queries.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -186,3 +190,4 @@
     </script>
 </body>
 </html>
+
