Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
                class="inline-block bg-[#3b3b3b] text-white px-6 py-3 rounded-md hover:bg-opacity-80 transition">
                 <i class="fab fa-github mr-2"></i>GitHub
             </a>
-            <a href="#" download
-               class="inline-block bg-[#a47148] text-white px-6 py-3 rounded-md hover:bg-opacity-80 transition">
-                <i class="fas fa-download mr-2"></i>Download Resume
+            <a href="https://raw.githubusercontent.com/volcanon2468/portfolio/main/Resume_Divyaroopk.pdf" download="Resume_Divyaroopk.pdf" class="inline-block bg-[#a47148] text-white px-6 py-3 rounded-md hover:bg-opacity-80 transition">
+                <i class="fas fa-download mr-2"></i>Resume
             </a>
+
+            
         </div>
     </section>
 
@@ -309,3 +310,4 @@
     </script>
 </body>
 </html>
+
